--- a/view/src/main/resources/templates/login.html
+++ b/view/src/main/resources/templates/login.html
@@ -3,23 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script th:src="@{/js/auth.js}"></script>
 </head>
 <body>
     <h1>로그인</h1>
-    <form th:action="@{/auth/login}" method="post">
-        <label>
-            이메일 :
-            <input type="text" name="email" placeholder="email@domain.com">
-        </label> <br>
-        <label>
-            비밀번호 :
-            <input type="password" name="password">
-        </label> <br>
-        <label>
-            닉네임 :
-            <input type="text" name="nickname" placeholder="fortice">
-        </label> <br>
-        <input type="submit" value="로그인">
-    </form>
+    <label>
+        이메일 :
+        <input type="text" name="email" placeholder="email@domain.com">
+    </label> <br>
+    <label>
+        비밀번호 :
+        <input type="password" name="password">
+    </label> <br>
+    <button onclick="login()">로그인"</button>
 </body>
 </html>
