--- a/view/src/main/resources/templates/login.html
+++ b/view/src/main/resources/templates/login.html
@@ -10,11 +10,11 @@
     <h1>로그인</h1>
     <label>
         이메일 :
-        <input type="text" name="email" placeholder="email@domain.com">
+        <input type="text" id="email" name="email" placeholder="email@domain.com">
     </label> <br>
     <label>
         비밀번호 :
-        <input type="password" name="password">
+        <input type="password" id="password" name="password">
     </label> <br>
     <button onclick="login()">로그인"</button>
 </body>
