--- a/view/src/main/resources/templates/regist.html
+++ b/view/src/main/resources/templates/regist.html
@@ -9,15 +9,15 @@
     <form th:action="@{/api/auth/regist}" method="post">
         <label>
             이메일 :
-            <input type="text" name="email" placeholder="email@domain.com">
+            <input type="text" id="email" name="email" placeholder="email@domain.com">
         </label> <br>
         <label>
             비밀번호 :
-            <input type="password" name="password">
+            <input type="password" id="password" name="password">
         </label> <br>
         <label>
             닉네임 :
-            <input type="text" name="nickname" placeholder="fortice">
+            <input type="text" id="nickname" name="nickname" placeholder="fortice">
         </label> <br>
         <input type="submit" value="회원가입">
     </form>
