feat: 로그인 시 토큰 쿠키 설정, 유저 관리 페이지 생성

--- a/view/src/main/resources/templates/fragments/top.html
+++ b/view/src/main/resources/templates/fragments/top.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 
-<th:block th:fragment="topbarFragment">
+<th:block th:fragment="topbarFragment(isLogin)">
 
   <!-- Topbar -->
   <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
@@ -9,8 +9,11 @@
     <a th:href="@{/}">
       <img th:src="@{img/stove.png}" style="width: 192px;height: 80px"/>
     </a>
-    <a th:href="@{/login}">
+    <a th:if="${!isLogin}" th:href="@{/login}">
       로그인
+    </a>
+    <a th:if="${isLogin}" th:href="@{/logout}">
+      로그아웃
     </a>
   </nav>
 
