--- a/view/src/main/resources/templates/index.html
+++ b/view/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 
 <th:block layout:fragment="content">
     <!-- Begin Page Content -->
-    <th:block th:replace="/fragments/top :: topbarFragment"></th:block>
+    <th:block th:replace="/fragments/top :: topbarFragment(true)"></th:block>
     <div class="container-fluid">
         <h1>레이아웃을 사용해 페이지 구성하기!</h1>
     </div>
