--- a/view/src/main/resources/templates/management.html
+++ b/view/src/main/resources/templates/management.html
@@ -6,8 +6,13 @@
 </head>
 <body>
     <h1>관리자 페이지</h1>
-    <table id="user-list-wrapper">
-
+    <table id="user-list-table">
+        <tr>
+            <th>유저 이름</th>
+            <th>유저 이메일</th>
+            <th>유저 권한</th>
+            <th>이메일 인증</th>
+        </tr>
     </table>
 </body>
 </html>
