--- a/view/src/main/resources/templates/index.html
+++ b/view/src/main/resources/templates/index.html
@@ -5,10 +5,12 @@
 
 <th:block layout:fragment="content">
     <!-- Begin Page Content -->
-    <th:block th:replace="/fragments/top :: topbarFragment(true)"></th:block>
+    <th:block th:replace="/fragments/top :: topbarFragment(${isLogin})"></th:block>
     <div class="container-fluid">
         <h1>레이아웃을 사용해 페이지 구성하기!</h1>
     </div>
-    <a th:href="@{/login}">로그인 하러 가기</a>
+    <a th:if="${isLogin}" th:href="@{/login}">로그인 하러 가기</a>
+
+    <a th:if="${isAdmin}" th:href="@{/management}">유저 관리하기</a>
 </th:block>
 </html>
