--- a/view/src/main/resources/templates/login.html
+++ b/view/src/main/resources/templates/login.html
@@ -7,6 +7,7 @@
     <script th:src="@{/js/auth.js}"></script>
 </head>
 <body>
+    <a th:href="@{/}"><H1>Home</H1></a>
     <h1>로그인</h1>
     <label>
         이메일 :
@@ -16,6 +17,6 @@
         비밀번호 :
         <input type="password" id="password" name="password">
     </label> <br>
-    <button onclick="login()">로그인"</button>
+    <button onclick="login()">로그인</button>
 </body>
 </html>
