--- a/view/src/main/resources/templates/login.html
+++ b/view/src/main/resources/templates/login.html
@@ -7,6 +7,10 @@
     <script th:src="@{/js/auth.js}"></script>
 </head>
 <body>
+    <script>
+        if(document.cookie)
+            location.reload('http://localhost/')
+    </script>
     <a th:href="@{/}"><H1>Home</H1></a>
     <h1>로그인</h1>
     <label>
