--- a/view/src/main/resources/templates/management.html
+++ b/view/src/main/resources/templates/management.html
@@ -7,7 +7,7 @@
     <script th:src="@{/js/management.js}"></script>
 </head>
 <body>
-    <th:block th:replace="/fragments/top :: topbarFragment(${isLogin})"></th:block>
+    <th:block th:replace="fragments/top :: topbarFragment(${isLogin})"></th:block>
     <div th:if="${isAdmin}">
         <h1>관리자 페이지</h1>
         <table id="user-list-table">
