feat: ajax 로직 분리, 테스트용 헤더 추가

--- a/view/src/main/resources/templates/regist.html
+++ b/view/src/main/resources/templates/regist.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <script th:src="@{/js/ajax.js}"></script>
+    <script th:src="@{/js/auth.js}"></script>
 </head>
 <body>
     <h1>회원가입</h1>
