--- a/view/src/main/resources/templates/login.html
+++ b/view/src/main/resources/templates/login.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <title>Login</title>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script th:src="@{/js/ajax.js}"></script>
     <script th:src="@{/js/auth.js}"></script>
 </head>
 <body>
     <script>
         if(document.cookie)
-            location.reload('http://localhost/')
+            location.href('http://localhost/')
     </script>
     <a th:href="@{/}"><H1>Home</H1></a>
     <h1>로그인</h1>
