--- a/view/src/main/resources/templates/management.html
+++ b/view/src/main/resources/templates/management.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Login</title>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script th:src="@{/js/ajax.js}"></script>
     <script th:src="@{/js/management.js}"></script>
 </head>
 <body>
