feat: 로그인 후 메인페이지 이동

--- a/view/src/main/resources/templates/login.html
+++ b/view/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
 <body>
     <script>
         if(document.cookie)
-            location.href('http://localhost/')
+            location.replace('http://localhost/')
     </script>
     <a th:href="@{/}"><H1>Home</H1></a>
     <h1>로그인</h1>
