chore: 간단한 변경

--- a/view/src/main/resources/templates/fragments/top.html
+++ b/view/src/main/resources/templates/fragments/top.html
@@ -6,7 +6,7 @@
   <script>
     let logout = () => {
       document.cookie = "accessToken=; expires=Thu, 01 Jan 1970 00:00:01 GMT;"
-      location.reload()
+      location.replace("/")
     }
   </script>
 
